fea-rs/test-data/parse-tests/bad/bad_tag_num.fea
feature 1pos {
  pos A B 20;
} 1pos;
